# syscmdline

./: CMakeLists.txt  README.md
docs/: concepts.md  examples.md
examples/: CMakeLists.txt
examples/del/: main.cpp
examples/gcc/: main.cpp
examples/git/: main.cpp
examples/mv/: main.cpp
include/syscmdline/: argument.h  argumentholder.h  command.h  global.h  helplayout.h  option.h  parser.h  parseresult.h  sharedbase.h  shareddata.h  strings.h  symbol.h  system.h  value.h
src/: CMakeLists.txt  argument.cpp  argument_p.h  command.cpp  command_p.h  helplayout.cpp  helplayout_p.h  map_p.h  option.cpp  option_p.h  parser.cpp  parser_p.h  parseresult.cpp  parseresult_p.h  sharedbase.cpp  sharedbase_p.h  strings.cpp  strings.h  symbol.cpp  symbol_p.h  system.cpp  utils.cpp  utils.h  utils_p.h  value.cpp
src/capi/: hash.c  hash.h  syscmdline.h  syscmdline_private.h  vector.c  vector.h
src/cxxapi/: hash.hpp  vector.hpp
src/locales/: en_US.h  zh_CN.h
src/stl2/: hash.hpp  vector.hpp
src/stl2/c/: hash.c  hash.h  vector.c  vector.h
tests/: CMakeLists.txt
tests/basic/: main.cpp
tests/hash/: CMakeLists.txt  main.cpp
tests/tst_basic/: main.cpp
tests/tst_correction/: CMakeLists.txt  main.cpp
tests/tst_diffsinger/: CMakeLists.txt  main.cpp
tests/tst_dosstyle/: CMakeLists.txt  main.cpp
tests/tst_exclusive/: CMakeLists.txt  main.cpp
tests/vector/: CMakeLists.txt  main.cpp
